chore: use main font stack for code

--- a/assets/css/extended/font.css
+++ b/assets/css/extended/font.css
@@ -3,3 +3,7 @@
 body {
     font-family: "Noto Sans Mono", "Noto Sans SC", "Noto Color Emoji";
 }
+
+code {
+    font-family: "Noto Sans Mono", "Noto Sans SC", "Noto Color Emoji";
+}
