feat: new article

--- a/layouts/shortcodes/ruby.html
+++ b/layouts/shortcodes/ruby.html
@@ -1,4 +1,4 @@
 <ruby>
-    <rb>{{ .Get 0 }}</rb>
-    <rt>{{ .Get 1 }}</rt>
+    <rb>{{ .Inner | markdownify }}</rb>
+    <rt>{{ .Get 0 }}</rt>
 </ruby>
