--- a/assets/css/extended/tweak.css
+++ b/assets/css/extended/tweak.css
@@ -10,3 +10,13 @@
     margin-left: auto;
     margin-right: auto;
 }
+
+details {
+    background: var(--tertiary);
+    border-radius: 4px;
+    padding: 10px 14px;
+}
+
+details[open] > summary {
+    margin-bottom: 10px;
+}
