chore: minor changes

--- a/assets/css/extended/tweak.css
+++ b/assets/css/extended/tweak.css
@@ -12,11 +12,15 @@
 }
 
 details {
-    background: var(--tertiary);
+    background: var(--code-bg);
     border-radius: 4px;
     padding: 10px 14px;
 }
 
 details[open] > summary {
     margin-bottom: 10px;
+}
+
+del {
+    color: var(--secondary);
 }
